# EgeMarks

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  pytest.ini
domain/: structures.py
infrastructure/: decorators.py  exceptions.py
services/: data_processors.py  represent_services.py
tests/: test_data_processors.py
