
[project]
name = "ege-marks"
version = "0.1.0"
description = "Парсинг и визуализация шкал перевода баллов ЕГЭ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "xlsxwriter>=3.2.9",
]
